--- a/.gitignore
+++ b/.gitignore
@@ -12,17 +12,25 @@
 **/.next/
 **/out/
 
-# misc
-.DS_Store
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# secrets and tokens
+**/*.env
+**/*.env.*
+!**/*.env.example
+**/token.json
+**/credentials.json
+**/token.pickle
+**/client_secret*.json
+**/*.key
+**/*.pem
+**/*.p12
+**/secrets/
+**/.DS_Store
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# logs
+**/npm-debug.log*
+**/yarn-debug.log*
+**/yarn-error.log*
+**/logs/
 
 # IDEs
 .vscode/
@@ -32,4 +40,3 @@ yarn-error.log*
 .gemini/
 .kiro/
 brain/
-**/logs/
